tests/errors/directive_positional_after_named.dang
# Test that positional arguments must come before named arguments

directive @example(a: String!, b: String!) on FIELD_DEFINITION

type Test {
  # This should fail: positional arg after named arg
  field: String! @example(a: "named", "positional")
}

print("Should not reach here!")
